--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ th {
     color: #DAEAF2;
 }
 img {
-    border-radius: 12px;
+    border-radius: 20px;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 7px 7px 30px #000000;
 }
 table.mod {
     background-image: linear-gradient(to top right, #0F7499, #0B4C70);
@@ -34,7 +35,7 @@ table.misc {
 table {
     margin-left: auto;
     margin-right: auto;
-    border-radius: 12px;
+    border-radius: 20px;
     margin-bottom: 60px;
 }
 td {
@@ -61,6 +62,9 @@ td.parancs {
     padding-bottom: 2px;
     padding-top: 2px;
     font-weight: 400;
+}
+td.elso {
+    padding-top: 10px;
 }
 td.utolso {
     padding-bottom: 25px;
