--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ th {
     font-weight: 500;
     font-size: 37px;
     padding-top: 25px;
+    padding-bottom: 0px;
     color: #DAEAF2;
 }
 img {
@@ -18,10 +19,10 @@ img {
     box-shadow: 7px 7px 30px #000000;
 }
 table.mod {
-    background-image: linear-gradient(to top right, #0F7499, #0B4C70);
+    background-image: linear-gradient(to top right, #10789E, #0B4B6E);
 }
 table.music {
-    background-image: linear-gradient(to top right, #CC9C00, #BF5111);
+    background-image: linear-gradient(to top right, #CC9C00, #BA4F11);
 }
 table.custom {
     background-image: linear-gradient(to top right, #31AA47, #1B5E28);
@@ -30,32 +31,32 @@ table.config {
     background-image: linear-gradient(to top right, #666666, #353535);
 }
 table.misc {
-    background-image: linear-gradient(to top right, #8028BF, #57188E);
+    background-image: linear-gradient(to top right, #8028BF, #54178A);
 }
 table {
     margin-left: auto;
     margin-right: auto;
     border-radius: 20px;
-    margin-bottom: 60px;
+    margin-bottom: 55px;
 }
 td {
     font-family: 'Alexandria', sans-serif;
     font-weight: 300;
     text-align: center;
     font-size: 16px;
-    padding-bottom: 10px;
+    padding-bottom: 8px;
     padding-top: 10px;
     color: #DAEAF2;
 }
 td.alcim {
-    font-size: 15px;
-    padding-bottom: 8px;
+    font-size: 16px;
+    padding-bottom: 7px;
     padding-top: 0px;
 }
 td.felsorol {
-    padding-bottom: 4px;
-    padding-top: 4px;
-    font-weight: 400;
+    padding-bottom: 3px;
+    padding-top: 3px;
+    font-weight: 300;
 }
 td.parancs {
     font-size: 15px;
@@ -68,4 +69,9 @@ td.elso {
 }
 td.utolso {
     padding-bottom: 25px;
+}
+p {
+    display: inline;
+    font-size: 15px;
+    font-weight: 400;
 }
