--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Alexandria:wght@300;400;500;600&display=swap');
 
-body {
-    background-color: #070510;
+html {
+    scroll-behavior: smooth;
 }
+
+body {
+    background-color: #161516;
+}
+
 th {
     font-family: 'Alexandria', sans-serif;
     font-weight: 500;
@@ -11,34 +16,58 @@ th {
     padding-bottom: 0px;
     color: #DAEAF2;
 }
-img {
+
+img.gif {
     border-radius: 20px;
     width: 90%;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 7px 7px 30px #000000;
 }
+
+img.logo {
+    width: 4%;
+    float: left;
+}
+
+img.icon {
+    width: 15%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 table.mod {
     background-image: linear-gradient(to top right, #10789E, #0B4B6E);
 }
+
 table.music {
     background-image: linear-gradient(to top right, #CC9C00, #BA4F11);
 }
+
 table.custom {
     background-image: linear-gradient(to top right, #31AA47, #1B5E28);
 }
+
 table.config {
     background-image: linear-gradient(to top right, #666666, #353535);
 }
+
 table.misc {
     background-image: linear-gradient(to top right, #8028BF, #54178A);
 }
+
 table {
     margin-left: auto;
     margin-right: auto;
     border-radius: 20px;
     margin-bottom: 55px;
+    clear: left;
 }
+
+table.utolso {
+    margin-bottom: 0px;
+}
+
 td {
     font-family: 'Alexandria', sans-serif;
     font-weight: 300;
@@ -48,30 +77,102 @@ td {
     padding-top: 10px;
     color: #DAEAF2;
 }
+
 td.alcim {
     font-size: 16px;
     padding-bottom: 7px;
     padding-top: 0px;
 }
+
 td.felsorol {
     padding-bottom: 3px;
     padding-top: 3px;
     font-weight: 300;
 }
+
 td.parancs {
     font-size: 15px;
     padding-bottom: 2px;
     padding-top: 2px;
     font-weight: 400;
 }
+
 td.elso {
     padding-top: 10px;
 }
+
 td.utolso {
     padding-bottom: 25px;
 }
+
 p {
     display: inline;
     font-size: 15px;
     font-weight: 400;
+}
+
+.tab {
+    overflow: hidden;
+}
+
+button.tablinks {
+    background-color: #070510;
+    float: right;
+    border: none;
+    cursor: pointer;
+    padding: 10px 16px;
+    transition: 0.3s;
+    font-family: 'Alexandria', sans-serif;
+    font-weight: 600;
+    font-size: 23px;
+    color: #DAEAF2;
+    border-radius: 10px;
+}
+
+.tab button:hover {
+    background-color: #DAEAF2;
+    color: #070510;
+}
+
+.tab button.active {
+    background-color: #DAEAF2;
+    color: #070510;
+}
+
+.tabcontent {
+    display: none;
+    border-top: none;
+    animation: fadeEffect 0.7s;
+}
+
+#topButton {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: #070510;
+    color: #DAEAF2;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 10px;
+    font-size: 18px;
+    transition: 0.3s;
+}
+
+#topButton:hover {
+    background-color: #DAEAF2;
+    color: #070510;
+}
+
+@keyframes fadeEffect {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
