--- a/style.css
+++ b/style.css
@@ -116,6 +116,15 @@ p {
     font-weight: 400;
 }
 
+h1 {
+    font-family: 'Alexandria', sans-serif;
+    font-weight: 600;
+    text-align: center;
+    font-size: 40px;
+    padding: 40px;
+    color: #DAEAF2;
+}
+
 .tab {
     overflow: hidden;
 }
