--- a/style.css
+++ b/style.css
@@ -29,13 +29,13 @@ img.gif {
 }
 
 img.logo {
-    width: 75px;
+    width: 85px;
     float: left;
     transition: opacity 0.2s;
 }
 
 img.logo:hover {
-    opacity: 0.65;
+    opacity: 0.5;
     transition: opacity 0.2s;
 }
 
@@ -179,10 +179,15 @@ button.invite {
     color: #070510;
 }
 
+.tab img.active {
+    background-color: transparent;
+}
+
 .tabcontent {
     display: none;
     border-top: none;
     animation: fadeEffect 0.5s;
+    padding-top: 20px;
 }
 
 #topButton {
@@ -215,7 +220,7 @@ button.invite {
     color: #e6eff3;
     cursor: pointer;
     padding: 18px;
-    width: 20%;
+    width: 380px;
     border: none;
     text-align: middle;
     outline: none;
@@ -230,12 +235,11 @@ button.invite {
     border-radius: 12px;
     transition: 0.2s;
 }
-.tabcontent {
-    padding-top: 40px;
-}
+
 .collapsible:hover {
     background-color: #39393a;
 }
+
 .active {
     background-color: #e6eff3;
     color: #070510;
@@ -257,7 +261,7 @@ table.parancsok {
     border: 1px solid #222222;
     border-spacing: 0;
     table-layout: fixed;
-    width: 65%;
+    width: 1300px;
     overflow: hidden;
 }
 
@@ -274,7 +278,7 @@ td.title {
 }
 
 td.description {
-    width: 35%;
+    width: 37%;
 }
 
 td.command {
@@ -282,7 +286,7 @@ td.command {
 }
 
 td.required {
-    width: 17%;
+    width: 15%;
 }
 
 table.legend {
@@ -294,7 +298,7 @@ table.legend {
     border: 1px solid #222222;
     border-spacing: 0;
     table-layout: fixed;
-    width: 17%;
+    width: 310px;
     overflow: hidden;
     margin-top: 75px;
     margin-bottom: 0;
