--- a/style.css
+++ b/style.css
@@ -226,7 +226,7 @@ button.invite {
     display: block;
     margin: 0 auto;
     margin-top: 20px;
-    margin-bottom: 0;
+    margin-bottom: 20px;
     font-family: 'Alexandria', sans-serif;
     font-weight: 500;
     font-size: 24px;
@@ -243,7 +243,6 @@ button.invite {
 }
 
 .content {
-    padding: 0 18px;
     display: none;
     background-color: transparent;
 }
@@ -252,9 +251,7 @@ table.parancsok {
     background-color: #141414;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 20px;
     border-radius: 13px;
-    border: 1px solid #222222;
     border-spacing: 0;
     table-layout: fixed;
     width: 1150px;
