--- a/style.css
+++ b/style.css
@@ -27,43 +27,46 @@ a:hover {
     text-decoration: none;
 }
 
-nav {
-    background-color: #00101af6;
-    position: sticky;
-    margin-bottom: 30px;
-    top: 0;
+.navbar {
+    background-color: #00101a !important;
+    margin-bottom: 30px !important;
+    padding: 10px !important;
 }
 
-nav ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none !important;
+    box-shadow: none !important;
 }
 
-nav ul li {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 5px;
+.fa-bars {
+    color:#e7e7e7;
+    font-size: 22px;
+}
+
+.fa-bars:hover {
+    color:#5e5e5e;
+    transition: 0.2s;
+    font-size: 22px;
 }
 
 nav ul li a {
-    display: block;
-    padding: 7px 17px;
-    text-decoration: none;
     font-family: 'Alexandria', sans-serif;
-    font-weight: 500;
-    font-size: 18px;
+    font-weight: 500 !important;
+    font-size: 115% !important;
     border-radius: 8px;
     background-color: transparent;
     color: #e7e7e7;
+    padding-left: 20px !important;
+    padding-right: 20px !important;
+    margin: 5px;
 }
 
 nav ul li a:hover {
     background-color: #363636;
     transition: 0.2s;
-    color: #e7e7e7;
+    color: #e7e7e7 !important;
 }
 
 nav ul li a:link {
@@ -74,10 +77,9 @@ nav ul li a:visited {
     color: #e7e7e7;
 }
 
-nav ul li.active a {
+nav ul a.active {
     background-color: #e7e7e7;
-    font-weight: bold;
-    color: #070510;
+    color: #070510 !important;
 }
 
 nav ul li a.invite {
@@ -93,7 +95,7 @@ nav ul li a.invite:hover {
 
 .nav-icon {
     height: 25px;
-    margin-right: 5px;
+    margin-right: 8px;
     margin-left: -5px;
     display: inline-block;
     position: relative;
@@ -192,10 +194,10 @@ img.gif {
 }
 
 footer {
-    padding-top: 10px;
+    padding-top: 12px;
     margin-top: auto;
     padding-bottom: 0;
-    background-color: #00101af6;
+    background-color: #00101a;
 }
 
 p.footer-links {
