--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    background-color: #151e31 !important;
+    background-color: #182542 !important;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
