--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Alexandria:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Alexandria:wght@300;400;500;600&display=swap");
 
 html {
     scroll-behavior: smooth;
 }
 
 body {
-    background-color: #182542 !important;
+    background-color: #1a294b !important;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -40,7 +40,7 @@ a:hover {
     box-shadow: none !important;
 }
 
-.fa-bars {
+.fa-bars, .fa-bars:visited {
     color:#e7e7e7;
     font-size: 22px;
 }
@@ -82,15 +82,20 @@ nav ul a.active {
     color: #070510 !important;
 }
 
+nav ul a.active:hover {
+    background-color: #e7e7e7;
+    color: #070510 !important;
+}
+
 nav ul li a.invite {
-    background-image: linear-gradient(to top right, #3ba8ec, #1b79ac);
+    transition: 0.2s;
+    background-color: #39a1e2;
     color: #ffffff !important;
-    box-shadow: 0 0 12px #1f8ac4;
+    box-shadow: 0 0 10px #1985c0;
 }
 nav ul li a.invite:hover {
-    background-image: linear-gradient(to top right, #1b79ac, #3ba8ec);
-    color: #ffffff;
-    box-shadow: 0 0 12px #3ba8ec;
+    transition: 0.2s;
+    box-shadow: 0 0 15px #3ba8ec;
 }
 
 .nav-icon {
@@ -175,7 +180,7 @@ p.command-showcase {
     padding-bottom: 0px;
     padding-top: 1px;
     margin-bottom: 0px;
-    font-weight: 500 !important;
+    font-weight: 300 !important;
     text-align: center;
 }
 
@@ -197,6 +202,7 @@ footer {
 }
 
 p {
+    font-family: 'Alexandria', sans-serif;
     text-align: center;
 }
 
@@ -208,31 +214,52 @@ p {
 p.footer-links {
     color: #e6eff3;
     margin-bottom: 5px;
+    font-weight: 300;
 }
 
 #pInput {
     font-family: 'Alexandria', sans-serif;
-    background-color: #131313;
-    font-size: 17px;
+    background-color: #0e1420;
+    font-size: 105%;
     font-weight: 400;
-    color: #e6eff3;
+    color: #e6eff3 !important;
     display: block;
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
     border: 0;
     border-radius: 8px;
-    padding: 10px;
+    padding: 12px;
     outline: none;
-    width: 30%;
+    width: 210px;
     text-align: center;
+}
+
+#pInput::placeholder {
+    color: #b3b3b3;
+}
+
+#pInput:focus {
+    background-color: #090e16;
+}
+
+code {
+    color: #d5d9db !important;
+    font-size: 13px !important;
+    background-color: #111111;
+    padding: 3px;
+    border-radius: 4px;
+}
+
+code.optional {
+    color: #a7a7a7 !important;
 }
 
 table.commands {
     border-spacing: 0;
     table-layout: auto;
     margin: 0 auto;
-    max-width: 60%;
+    max-width: 55%;
     border-collapse: separate;
     border-radius: 15px;
     overflow: hidden;
@@ -240,13 +267,13 @@ table.commands {
 }
 
 table.legend {
+    border-spacing: 0;
+    table-layout: auto;
+    margin: 0 auto;
     background-color: #141414;
-    margin-left: auto;
-    margin-right: auto;
+    border-collapse: separate;
     border-radius: 15px;
-    table-layout: fixed;
-    min-width: 250px;
-    width: 30%;
+    max-width: 70%;
     overflow: hidden;
     margin-top: 15px;
 }
@@ -260,53 +287,69 @@ caption {
     color: #e6eff3 !important;
 }
 
-th {
-    padding: 10px;
-    background-color: #111111 !important;
+table.commands th, table.commands td {
+    padding: 10px !important;
     border: 1px solid #222222 !important;
     color: #e6eff3 !important;
     font-family: 'Alexandria', sans-serif;
-    font-size: 18px !important;
-    font-weight: 500 !important;
-    text-align: center !important;
     vertical-align: middle;
 }
 
+th {
+    background-color: #111111 !important;
+    font-size: 18px !important;
+    font-weight: 500 !important;
+    text-align: center !important;
+}
+
 td {
-    padding: 10px !important;
     background-color: #181818 !important;
-    border: 1px solid #222222 !important;
-    line-height: 150%;
-    font-size: 15px;
-    color: #e6eff3 !important;
-    font-family: 'Alexandria', sans-serif;
     font-weight: 300 !important;
     font-size: 15px !important;
-    vertical-align: middle;
 }
 
 td:nth-child(3) {
     text-align: center;
+    padding: 10px !important;
 }
 
-th.command-column {
+td:nth-child(1) {
+    text-align: left;
+    font-weight: 400 !important;
+}
+
+.command-column, .description-column, .required-column {
+    background-color: #000000 !important;
+    border: 1px solid #222222 !important;
+}
+
+.command-column {
+    width: 25%;
+}
+
+.required-column {
     width: 20%;
-    background-color: #000000 !important;
-    border: 1px solid #222222 !important;
-}
-
-th.description-column {
-    width: 50%;
-    background-color: #000000 !important;
-    border: 1px solid #222222 !important;
-}
-
-th.required-column {
-    width: 20%;
-    background-color: #000000 !important;
-    border: 1px solid #222222 !important;
 }
 
 .table-striped>tbody>tr:nth-child(odd)>td {
-   background-color: #1d1d1d !important;
+    background-color: #1d1d1d !important;
+}
+
+.tooltip .tooltip-inner {
+    font-family: 'Alexandria', sans-serif;
+    color: #e6eff3;
+    padding: 8px;
+    font-size: 14px;
+    max-width: 250px;
+    font-weight: 300 !important;
+    background-color: #111111;
+    border: 1px solid #222222;
+}
+
+.tooltip b {
+    font-weight: 500 !important;
+}
+
+.tooltip .tooltip-arrow::before {
+    border-top-color: #111111;
 }
