--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin: 0;
 }
 
 a:link {
@@ -42,13 +41,12 @@ a:hover {
 
 .fa-bars, .fa-bars:visited {
     color:#e7e7e7;
-    font-size: 22px;
+    font-size: 100%;
 }
 
 .fa-bars:hover {
     color:#5e5e5e;
     transition: 0.2s;
-    font-size: 22px;
 }
 
 nav ul li a {
@@ -150,7 +148,7 @@ hr {
 h1 {
     font-family: 'Alexandria', sans-serif;
     font-weight: 600 !important;
-    font-size: 40px !important;
+    font-size: 250% !important;
     color: #e6eff3 !important;
     text-align: center;
 }
@@ -158,7 +156,7 @@ h1 {
 h2 {
     font-family: 'Alexandria', sans-serif;
     font-weight: 500;
-    font-size: 35px;
+    font-size: 200% !important;
     padding-bottom: 0px;
     color: #e6eff3 !important;
     text-align: center;
@@ -167,7 +165,7 @@ h2 {
 h3 {
     font-family: 'Alexandria', sans-serif;
     font-weight: 400 !important;
-    font-size: 16px !important;
+    font-size: 100% !important;
     padding-top: 0px;
     padding-bottom: 15px;
     color: #e6eff3 !important;
@@ -176,7 +174,7 @@ h3 {
 
 p.command-showcase {
     color: #ffffff !important;
-    font-size: 15px !important;
+    font-size: 100% !important;
     padding-bottom: 0px;
     padding-top: 1px;
     margin-bottom: 0px;
@@ -207,14 +205,18 @@ p {
 }
 
 #version {
-    color: #e7e7e7;
-    margin-bottom: 10px;
+    margin-bottom: 0;
 }
 
 p.footer-links {
-    color: #e6eff3;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     font-weight: 300;
+}
+
+p.footer-links, p#version {
+    color: #cacecf;
+    display: inline-block;
+    margin-right: 5px;
 }
 
 #pInput {
@@ -245,7 +247,7 @@ p.footer-links {
 
 code {
     color: #d5d9db !important;
-    font-size: 13px !important;
+    font-size: 85% !important;
     background-color: #111111;
     padding: 3px;
     border-radius: 4px;
@@ -260,7 +262,8 @@ table.commands {
     table-layout: auto;
     margin: 0 auto;
     max-width: 55%;
-    border-collapse: separate;
+    border-collapse: collapse !important;
+    border-style: hidden !important;
     border-radius: 15px;
     overflow: hidden;
     margin-bottom: 40px;
@@ -279,7 +282,7 @@ table.legend {
 }
 
 table.legend td, table.legend th {
-    font-size: 15px !important;
+    font-size: 100% !important;
 }
 
 caption {
@@ -289,7 +292,7 @@ caption {
 
 table.commands th, table.commands td {
     padding: 10px !important;
-    border: 1px solid #222222 !important;
+    border: 2px solid #222222 !important;
     color: #e6eff3 !important;
     font-family: 'Alexandria', sans-serif;
     vertical-align: middle;
@@ -297,7 +300,7 @@ table.commands th, table.commands td {
 
 th {
     background-color: #111111 !important;
-    font-size: 18px !important;
+    font-size: 110% !important;
     font-weight: 500 !important;
     text-align: center !important;
 }
@@ -305,7 +308,7 @@ th {
 td {
     background-color: #181818 !important;
     font-weight: 300 !important;
-    font-size: 15px !important;
+    font-size: 95% !important;
 }
 
 td:nth-child(3) {
@@ -320,15 +323,10 @@ td:nth-child(1) {
 
 .command-column, .description-column, .required-column {
     background-color: #000000 !important;
-    border: 1px solid #222222 !important;
 }
 
-.command-column {
+.command-column, .required-column {
     width: 25%;
-}
-
-.required-column {
-    width: 20%;
 }
 
 .table-striped>tbody>tr:nth-child(odd)>td {
@@ -339,7 +337,7 @@ td:nth-child(1) {
     font-family: 'Alexandria', sans-serif;
     color: #e6eff3;
     padding: 8px;
-    font-size: 14px;
+    font-size: 100%;
     max-width: 250px;
     font-weight: 300 !important;
     background-color: #111111;
@@ -352,4 +350,47 @@ td:nth-child(1) {
 
 .tooltip .tooltip-arrow::before {
     border-top-color: #111111;
+}
+
+@media (max-width: 767px) {
+    .table-responsive {
+        overflow-x: visible;
+    }
+    
+    table.commands {
+        width: 100%;
+    }
+    
+    table.commands thead {
+        display: none;
+    }
+    
+    table.commands th {
+        display: block;
+        width: 100%;
+        text-align: center;
+        border: none !important
+    }
+    
+    table.commands tr {
+        display: flex;
+        flex-direction: column;
+        border-bottom: 4px solid #111111 !important;
+    }
+    
+    table.commands td {
+        border: none !important;
+        border-bottom: 2px solid #222222 !important;
+        display: block;
+        text-align: left;
+    }
+    
+    table.commands td:nth-child(3)::before {
+        content: "Szükséges: ";
+        font-weight: 400;
+    }
+
+    table.commands td:nth-child(3), table.commands tr:last-child {
+        border-bottom: none !important;
+    }
 }
