--- a/style.css
+++ b/style.css
@@ -222,8 +222,9 @@ p {
 
 p.changelog {
     font-weight: 300;
+    font-size: 95%;
     text-align: left;
-    padding-left: 20px;
+    padding-left: 15px;
 }
 
 #version {
