--- a/style.css
+++ b/style.css
@@ -334,6 +334,11 @@ td:nth-child(3) {
     padding: 10px !important;
 }
 
+td:nth-child(2) {
+    text-align: left;
+    padding: 10px !important;
+}
+
 td:nth-child(1) {
     text-align: left;
     font-weight: 400 !important;
